<resources>
    <string name="app_name">News App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- News Sources -->
    <string name="deadline_news">Deadline News</string>
    <string name="dainik_bhaskar">Dainik Bhaskar</string>
    <string name="the_direct">The Direct</string>
    <string name="cnn">CNN</string>
    <string name="bbc">BBC</string>

    <!-- Placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
